site fluidity--fix

--- a/else/else.css
+++ b/else/else.css
@@ -253,3 +253,16 @@ body, html {
   html {
     overflow: hidden;
   }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  #content {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+  
+  #content.fade-out {
+    opacity: 0;
+  }
