--- a/page tickets/tickets.css
+++ b/page tickets/tickets.css
@@ -278,3 +278,15 @@
     transition: 0.3s;
   }
   
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  #content {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+  
+  #content.fade-out {
+    opacity: 0;
+  }
