--- a/style.css
+++ b/style.css
@@ -127,3 +127,16 @@ list-style-type: none;
     gap: 20px;
   }
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+#content {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
+#content.fade-out {
+  opacity: 0;
+}
