--- a/bookingtickets/book_tickets.css
+++ b/bookingtickets/book_tickets.css
@@ -97,3 +97,16 @@
     margin-bottom: -1px;
 
   }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  #content {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+  
+  #content.fade-out {
+    opacity: 0;
+  }
