--- a/page performers/about.css
+++ b/page performers/about.css
@@ -304,3 +304,16 @@ color: #868585;
   text-decoration: none;
   transition: 0.3s;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+#content {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
+#content.fade-out {
+  opacity: 0;
+}
